small changes to blog and adding videos

--- a/component_testing.html
+++ b/component_testing.html
@@ -78,7 +78,24 @@
             <img class="img-fluid" src="img/component_testing.jpg" alt="">
           </a>
           <span class="caption text-muted">Wired up prototype</span>
-          <p> With that wired up, I proceeded to write classes for each of them to test them out in Python.  This meant reading from the temperature sensor, controlling both the pump and the servo motor and of course, accessing the camera feed.  With all the components individually working, it was time to mechanically and electrically assmeble them together and work on the final solution </p>
+          <p> With that wired up, I proceeded to write classes for each of them to test them out in Python.  This meant reading from the temperature sensor, controlling both the pump and the servo motor and of course, accessing the camera feed.  With all the components individually working, it was time to mechanically and electrically assmeble them together and work on the final solution.</p>
+          <p>Below are videos of each component working.</p>
+
+          <video width="320" height="240" controls>
+            <source src="vid/camera_test.mp4" type="video/mp4">
+          </video>
+          <video width="320" height="240" controls>
+            <source src="vid/IR-sensor_Test.mp4" type="video/mp4">
+          </video>
+          <video width="320" height="240" controls>
+            <source src="vid/motor-test.mp4" type="video/mp4">
+          </video>
+          <video width="320" height="240" controls>
+            <source src="vid/pump_test.mp4" type="video/mp4">
+          </video>
+          <video width="320" height="240" controls>
+            <source src="vid/screen-test.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
