--- a/mlmodels.html
+++ b/mlmodels.html
@@ -79,7 +79,7 @@
           <a href="#">
             <img class="img-fluid" src="img/alex_m.png" alt="">
             <img class="img-fluid" src="img/morgan_m.png" alt="">
-            <img class="img-fluid" src="img/anna_m.png" alt="">
+            <img class="img-fluid" src="img/anna_nm1.png" alt="">
           </a>
           <span class="caption text-muted"></span>
           <h2 class="section-heading">Mouth and Nose Detection</h2>
