more minor changes

--- a/component_testing.html
+++ b/component_testing.html
@@ -59,7 +59,7 @@
             <h1>Component Testing</h1>
             <h2 class="subheading">Engineering Playtime</h2>
             <span class="meta">Posted by
-              <a href="#">Morgan Yeung</a>
+              <a href="#">Morgan and Anna</a>
               on January 07, 2021</span>
           </div>
         </div>
